--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Gift Giwa",
   "license": "ISC",
   "dependencies": {
+    "@three.ez/main": "^0.5.10",
     "three": "^0.164.1",
     "vite": "^5.2.11"
   }
