--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "rubiks-cube",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx vite build",
-    "run": "npx vite"
-  },
-  "author": "Gift Giwa",
-  "license": "ISC",
-  "dependencies": {
-    "@three.ez/main": "^0.5.10",
-    "three": "^0.164.1",
-    "vite": "^5.2.11"
-  }
+    "name": "rubiks-cube",
+    "version": "1.0.0",
+    "description": "",
+    "main": "main.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "npx vite build",
+        "run": "npx vite"
+    },
+    "author": "Gift Giwa",
+    "license": "ISC",
+    "dependencies": {
+        "@three.ez/main": "^0.5.10",
+        "three": "^0.164.1",
+        "vite": "^5.2.11"
+    },
+    "devDependencies": {
+        "prettier": "3.7.4"
+    }
 }
